--- a/views/home.html
+++ b/views/home.html
@@ -7,7 +7,122 @@
     <title>MercadoLiebre</title>
 </head>
 <body>
-    <h1>Esto es MercadoLiebre mannn</h1>
+    <header>
+        <img src="/images/logo-mercado-liebre.svg">
+        <p>Lugar para poner la barra de búsqueda</p>
+        <p>Comprá en cuotas y sin tarjeta de crédito</p>
+
+
+        <ul>
+            <li>Ofertas</li>
+            <li>Tiendas oficiales</li>
+            <li>Vender</li>
+            <li>Ayuda</li>
+        </ul>
+
+
+        <ul>
+            <li>Creá tu cuenta</li>
+            <li>Ingreá</li>
+            <li>Mis compras</li>
+        </ul>
+
+    </header>
     
+    <main>
+
+        <section>
+            <h3>Basado en tu última visita</h3>
+            <article>
+                <img width="60%"  src="/images/img-cafetera-moulinex.jpg">
+                <p>$6.770</p>
+                <p>40% OFF</p>
+                <h4>Cafetera Moulinex</h4>
+            </article>
+            
+            <article>
+                <img width="60%"  src="/images/img-macbook-pro-2019.jpg">
+                <p>$230.000</p>
+                <p>20% OFF</p>
+                <h4>MacBook Pro 2019</h4>
+            </article>
+
+            <article>
+                <img width="60%"  src="/images/img-samsung-galaxy-s10.jpg">
+                <p>$70.500</p>
+                <p>10% OFF</p>
+                <h4>Samsung Galaxy S10</h4>
+            </article>
+            
+            <article>
+                <img width="60%"  src="/images/img-tv-samsung-smart.jpg">
+                <p>$23.200</p>
+                <p>5% OFF</p>
+                <h4>SmartTv Samsung 43"</h4>
+            </article>
+
+        </section>
+
+
+        <section>
+            <h3>Sección de Ofertas</h3>
+            <article>
+                <img width="60%"  src="/images/img-cafetera-moulinex.jpg">
+                <p>$6.770</p>
+                <p>40% OFF</p>
+                <h4>Cafetera Moulinex</h4>
+            </article>
+            
+            <article>
+                <img width="60%"  src="/images/img-macbook-pro-2019.jpg">
+                <p>$230.000</p>
+                <p>20% OFF</p>
+                <h4>MacBook Pro 2019</h4>
+            </article>
+
+            <article>
+                <img width="60%"  src="/images/img-samsung-galaxy-s10.jpg">
+                <p>$70.500</p>
+                <p>10% OFF</p>
+                <h4>Samsung Galaxy S10</h4>
+            </article>
+            
+            <article>
+                <img width="60%"  src="/images/img-tv-samsung-smart.jpg">
+                <p>$23.200</p>
+                <p>5% OFF</p>
+                <h4>SmartTv Samsung 43"</h4>
+            </article>
+
+        </section>
+
+    </main>
+
+    <footer>
+
+        <section>
+            <h4>Pagá con tarjeta o en efectivo</h4>
+            <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
+                puntos de pago. ¡Y siempre es seguro!</p>
+        </section>
+
+        <section>
+            <h4>Envío gratis desde $ 2.500</h4>
+            <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
+                productos. Es un beneficio de Mercado Puntos.</p>
+        </section>
+
+        <section>
+            <h4>Seguridad, de principio a fin</h4>
+            <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
+                porque estás siempre protegid@.</p>
+        </section>
+
+        <section>
+            <h4>Copyright © 1999-2020 MercadoLiebre S.R.L.</h4>
+        </section>
+
+    </footer>
+
 </body>
 </html>
