--- a/views/home.html
+++ b/views/home.html
@@ -39,8 +39,8 @@
 
 
             <ul>
-                <li><a href="">Creá tu cuenta</a><i class="fas fa-id-card"></i></li>
-                <li><a href="">Ingresá</a><i class="fas fa-sign-in-alt"></i></li>
+                <li><a href="/registro">Creá tu cuenta</a><i class="fas fa-id-card"></i></li>
+                <li><a href="/login">Ingresá</a><i class="fas fa-sign-in-alt"></i></li>
                 <li><a href="">Mis Compras</a><i class="fas fa-shopping-basket"></i></li>
             </ul>
 
@@ -53,7 +53,7 @@
     </header>
     
     <div class="banner">
-
+        <img src="/images/img-home-banner.jpg">
     </div>
 
     <main>
