--- a/views/home.html
+++ b/views/home.html
@@ -14,11 +14,11 @@
 </head>
 <body>
     <header>
-        <div class="encabezado">
+        <div class="header-parte-superior">
             <img id="logo-meli" src="/images/logo-mercado-liebre.svg">
             
-            <div class="nav-bar">
-                <nav  id="barra-de-busqueda">Buscar...</nav>
+            <div class="barra-de-busqueda">
+                <nav>Buscar...</nav>
                 <i class="fas fa-search"></i>
             </div>
             
@@ -29,7 +29,7 @@
 
         </div>
         
-        <div class="botones-header">
+        <div class="nav-bar">
             <ul>
                 <li><a href="">Ofertas</a></li>
                 <li><a href="">Tiendas oficiales</a></li>
@@ -39,9 +39,9 @@
 
 
             <ul>
-                <li><a href="/registro">Creá tu cuenta</a><i class="fas fa-id-card"></i></li>
-                <li><a href="/login">Ingresá</a><i class="fas fa-sign-in-alt"></i></li>
-                <li><a href="">Mis Compras</a><i class="fas fa-shopping-basket"></i></li>
+                <li><a href="/registro">Creá tu cuenta </a><i class="fas fa-id-card"></i></li>
+                <li><a href="/login">Ingresá </a><i class="fas fa-sign-in-alt"></i></li>
+                <li><a href="">Mis Compras </a><i class="fas fa-shopping-basket"></i></li>
             </ul>
 
         </div>
@@ -60,14 +60,14 @@
 
 
         <h3 class="titulares">Basado en tu última visita</h3>
-        <section class="conjunto-articulos">
+        <section>
             <article>
                 <img src="/images/img-cafetera-moulinex.jpg">
                 <div class="descripcion">
                     <div class="truck-icon">
-                        <i class="fas fa-truck fa-2x"></i>
+                        <i class="fas fa-truck fa-1x"></i>
                     </div>
-                    <div class="precio-descuento">   
+                    <div class="contenedor-descuento-precio">   
                         <p class="precios">$6.770</p>
                         <p class="descuentos">40% OFF</p>
                     </div>
@@ -79,9 +79,9 @@
                 <img src="/images/img-macbook-pro-2019.jpg">
                 <div class="descripcion">
                     <div class="truck-icon">
-                        <i class="fas fa-truck fa-2x"></i>
+                        <i class="fas fa-truck fa-1x"></i>
                     </div>
-                    <div class="precio-descuento">   
+                    <div class="contenedor-descuento-precio">   
                         <p class="precios">$230.000</p>
                         <p class="descuentos">20% OFF</p>
                     </div>
@@ -93,9 +93,9 @@
                 <img src="/images/img-samsung-galaxy-s10.jpg">
                 <div class="descripcion">
                     <div class="truck-icon">
-                        <i class="fas fa-truck fa-2x"></i>
+                        <i class="fas fa-truck fa-1x"></i>
                     </div>
-                    <div class="precio-descuento">
+                    <div class="contenedor-descuento-precio">
                         <p class="precios">$70.500</p>
                         <p class="descuentos">10% OFF</p>
                     </div>
@@ -107,9 +107,9 @@
                 <img src="/images/img-tv-samsung-smart.jpg">
                 <div class="descripcion">
                     <div class="truck-icon">
-                        <i class="fas fa-truck fa-2x"></i>
+                        <i class="fas fa-truck fa-1x"></i>
                     </div>
-                    <div class="precio-descuento">
+                    <div class="contenedor-descuento-precio">
                         <p class="precios">$23.200</p>
                         <p class="descuentos">5% OFF</p>
                     </div>
@@ -121,27 +121,31 @@
         </section>
        
         <h3 class="titulares">Basado en tu última visita</h3>
-        <section class="conjunto-articulos">     
+        <section>
             <article>
                 <img src="/images/img-cafetera-moulinex.jpg">
                 <div class="descripcion">
                     <div class="truck-icon">
-                        <i class="fas fa-truck fa-2x"></i>
+                        <i class="fas fa-truck fa-1x"></i>
                     </div>
-                    <p class="precios">$6.770</p>
-                    <p class="descuentos">40% OFF</p>
+                    <div class="contenedor-descuento-precio">   
+                        <p class="precios">$6.770</p>
+                        <p class="descuentos">40% OFF</p>
+                    </div>
                     <h4>Cafetera Moulinex</h4>
                 </div>
             </article>
             
             <article>
                 <img src="/images/img-macbook-pro-2019.jpg">
-                <div class="descripcion">     
+                <div class="descripcion">
                     <div class="truck-icon">
-                        <i class="fas fa-truck fa-2x"></i>
+                        <i class="fas fa-truck fa-1x"></i>
                     </div>
-                    <p class="precios">$230.000</p>
-                    <p class="descuentos">20% OFF</p>
+                    <div class="contenedor-descuento-precio">   
+                        <p class="precios">$230.000</p>
+                        <p class="descuentos">20% OFF</p>
+                    </div>
                     <h4>MacBook Pro 2019</h4>
                 </div>
             </article>
@@ -150,55 +154,59 @@
                 <img src="/images/img-samsung-galaxy-s10.jpg">
                 <div class="descripcion">
                     <div class="truck-icon">
-                        <i class="fas fa-truck fa-2x"></i>
+                        <i class="fas fa-truck fa-1x"></i>
                     </div>
-                    <p class="precios">$70.500</p>
-                    <p class="descuentos">10% OFF</p>
+                    <div class="contenedor-descuento-precio">
+                        <p class="precios">$70.500</p>
+                        <p class="descuentos">10% OFF</p>
+                    </div>
                     <h4>Samsung Galaxy S10</h4>
                 </div>
             </article>
             
             <article>
                 <img src="/images/img-tv-samsung-smart.jpg">
-                <div class="descripcion">  
+                <div class="descripcion">
                     <div class="truck-icon">
-                        <i class="fas fa-truck fa-2x"></i>
+                        <i class="fas fa-truck fa-1x"></i>
                     </div>
-                    <p class="precios">$23.200</p>
-                    <p class="descuentos">5% OFF</p>
+                    <div class="contenedor-descuento-precio">
+                        <p class="precios">$23.200</p>
+                        <p class="descuentos">5% OFF</p>
+                    </div>
                     <h4>SmartTv Samsung 43"</h4>
+
                 </div>
             </article>
 
         </section>
 
 
-
     </main>
 
     <footer>
+        <div class="informacion-footer">
+            <section>
+                <div class="iconos-footer"><i class="fas fa-credit-card fa-3x"></i></div>
+                <h4 class="titulos-footer">Pagá con tarjeta o en efectivo</h4>
+                <p class="descripciones">Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
+                    puntos de pago. ¡Y siempre es seguro!</p>
+            </section>
 
-        <section>
-            <div class="iconos-footer"><i class="fas fa-credit-card fa-3x"></i></div>
-            <h4 class="titulos-footer">Pagá con tarjeta o en efectivo</h4>
-            <p class="descripciones">Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
-                puntos de pago. ¡Y siempre es seguro!</p>
-        </section>
+            <section>
+                <div class="iconos-footer"><i class="fas fa-gift fa-3x"></i></div>
+                <h4 class="titulos-footer">Envío gratis desde $ 2.500</h4>
+                <p class="descripciones">Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
+                    productos. Es un beneficio de Mercado Puntos.</p>
+            </section>
 
-        <section>
-            <div class="iconos-footer"><i class="fas fa-gift fa-3x"></i></div>
-            <h4 class="titulos-footer">Envío gratis desde $ 2.500</h4>
-            <p class="descripciones">Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
-                productos. Es un beneficio de Mercado Puntos.</p>
-        </section>
-
-        <section>
-            <div class="iconos-footer"><i class="fas fa-user-shield fa-3x"></i></div>
-            <h4 class="titulos-footer"> Seguridad, de principio a fin</h4>
-            <p class="descripciones">¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
-                porque estás siempre protegid@.</p>
-        </section>
-
+            <section>
+                <div class="iconos-footer"><i class="fas fa-user-shield fa-3x"></i></div>
+                <h4 class="titulos-footer"> Seguridad, de principio a fin</h4>
+                <p class="descripciones">¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
+                    porque estás siempre protegid@.</p>
+            </section>
+    </div>
         <section>
             <h4 class="descripciones">Copyright © 1999-2020 MercadoLiebre S.R.L.</h4>
         </section>
