--- a/public/css/main.css
+++ b/public/css/main.css
@@ -11,38 +11,14 @@
     box-sizing: border-box;
 }
 
-main{
-    width: 100vw;
-    margin: auto;
-    padding: 40px;
-    background-color: var(--Gris-claro);
-}
-
-article{
-    margin-top: 5px;
-    margin-bottom: 5px;
-    background-color: white;
-    margin-left: 2px;
-    margin-right: 2px;
-    box-shadow: 0px 0px 10px rgb(100, 100, 100);
-    width: 100%;
-    justify-content: space-around;
-}
-
-
-
-article img {
-    display: block;
-    margin: auto;
-    width: 50%;
-}
+/* -------- Header -------- */
 
 header{
     padding: 20px;
     background-color: var(--Amarillo);
 }
 
-.encabezado{
+.header-parte-superior{
     display: flex;    
     flex-wrap: wrap;
     justify-content: space-between;
@@ -56,7 +32,7 @@ header{
 
 }
 
-.nav-bar{
+.barra-de-busqueda{
     display: flex;
     text-align: left;
     justify-content: space-between;
@@ -90,21 +66,13 @@ header{
     margin: auto;
 }
 
-.banner{
-    background-color: var(--Gris-claro);
-}
-.banner img{
-    width: 100%;
-}
-
-
-.botones-header{
+.nav-bar{
     display: none;
     justify-content: space-between;
     width: 100%;
 }
 
-.botones-header ul{
+.nav-bar ul{
     display: flex;
     justify-content: space-between;
     text-align: left;
@@ -113,57 +81,138 @@ header{
     padding: 0%;
 }
 
-.botones-header ul li{
+.nav-bar ul li{
     margin: 0px 15px;
 }
 
 
-a{
+.nav-bar a{
     color: black;
     text-decoration: none;
 }
 
+/* -------- Banner -------- */
 
-footer section{
-    text-align: center;
-    padding: 5px;
+.banner{
+    background-color: var(--Gris-claro);
+}
+.banner img{
+    width: 100%;
 }
 
-footer{
-    padding: 100px 80px;
+
+/* -------- Main -------- */
+
+
+main{
+    width: 100vw;
+    margin: auto;
+    padding: 40px;
+    background-color: var(--Gris-claro);
+}
+
+main section{
+    display: flex;    
+    flex-wrap: wrap;
+    justify-content: space-around;
 }
 
 
-
-
-
-
-.cuerpos-de-texto {
-    font-size: 12px;
-}
 
 .titulares{
     font-size: 24px;
 }
 
+
+article{
+    margin-top: 5px;
+    margin-bottom: 5px;
+    background-color: white;
+    margin-left: 2px;
+    margin-right: 2px;
+    width: 100%;
+    justify-content: space-around;
+    
+    box-shadow: 0px 0px 10px rgb(182, 182, 182);
+    transition: all 450ms;
+}
+
+article:hover{
+    box-shadow: 0px 0px 10px rgb(82, 82, 82);
+}
+
+article img {
+    display: block;
+    margin: auto;
+    width: 50%;
+}
+
+.descripcion{
+    border-top: solid 1px #ebebeb;
+    padding: 10px;
+    display: none;
+    flex-direction: column;
+    
+}
+.contenedor-descuento-precio{
+    display: flex;
+    justify-content: space-between;
+
+}
+
 .precios {
     font-size: 18px;
-    width: 30%;
+    width: 45%;
 }
 
 .descuentos {
     font-size: 16px;
     color: var(--Verde);
-    width: 70%;
+    width: 55%;
     text-align: center;
     align-self: center;
 }
 
 
-.descripciones {
+.truck-icon{
+    color: var(--Verde);
+    display: flex;
+    justify-content: right;
+    height: 5px;
+}
+
+.truck-icon i {
+    position: relative;
+    bottom: 25px;;
+    right: 10px;
+    font-size: 16px;
+    padding: 5px;
+    width: 30px;
+    height: 30px;
+    border: 1px solid var(--Verde);
+    border-radius: 50%;
+}
+
+.truck-icon i:hover{
+    transform: rotate(270deg);
+}
+
+
+/* -------- Footer -------- */
+
+
+footer{
+    padding: 100px 60px;
     font-size: 16px;
     color: var(--Gris-oscuro);
 }
+
+
+footer section{
+    text-align: center;
+    padding: 10px 30px; 
+}
+
 
 .titulos-footer{
     font-size: 20px;
@@ -177,36 +226,20 @@ footer{
     
     color: var(--Celeste);
     width: 100px;
+    transition: color 600ms;
 
+}
+
+.iconos-footer:hover{
+    color: #0022AA;
 }
 
 
 
 
-.precio-descuento{
-    display: flex;
 
-}
+/* -------- Media Queries -------- */
 
-.truck-icon{
-    color: var(--Verde);
-    align-self: right;
-
-}
-.conjunto-articulos{
-    display: flex;    
-    flex-wrap: wrap;
-    justify-content: space-around;
-}
-
-
-.descripcion{
-    border-top: solid 1px #ebebeb;
-    padding: 15px;
-    display: none;
-    flex-direction: column;
-    
-}
 
 
 @media(min-width: 606px){
@@ -222,12 +255,18 @@ footer{
 
     }
 
-
     .descripcion{
-        display: flex;    
+        display: flex;  
+    }
+    .descripcion h4{
+        display: none;
     }
 
-    .botones-header{
+    .descripcion:hover h4{
+        display: flex;
+    }
+
+    .nav-bar{
         display: flex;
     }
 
@@ -236,7 +275,7 @@ footer{
     
     }
     
-    .nav-bar{
+    .barra-de-busqueda{
         width: 30%;
     }
     
@@ -253,11 +292,12 @@ footer{
     /*Desktop*/
     
     article{
-
         width: 24%;
-
-        
     
+    }
+
+    .informacion-footer{
+        display: flex;
     }
 
 }
