--- a/views/login.html
+++ b/views/login.html
@@ -14,11 +14,11 @@
 </head>
 <body>
     <header>
-        <div class="encabezado">
+        <div class="header-parte-superior">
             <img id="logo-meli" src="/images/logo-mercado-liebre.svg">
             
-            <div class="nav-bar">
-                <nav  id="barra-de-busqueda">Buscar...</nav>
+            <div class="barra-de-busqueda">
+                <nav>Buscar...</nav>
                 <i class="fas fa-search"></i>
             </div>
             
@@ -29,7 +29,7 @@
 
         </div>
         
-        <div class="botones-header">
+        <div class="nav-bar">
             <ul>
                 <li><a href="">Ofertas</a></li>
                 <li><a href="">Tiendas oficiales</a></li>
@@ -39,9 +39,9 @@
 
 
             <ul>
-                <li><a href="/registro">Creá tu cuenta</a><i class="fas fa-id-card"></i></li>
-                <li><a href="/login">Ingresá</a><i class="fas fa-sign-in-alt"></i></li>
-                <li><a href="">Mis Compras</a><i class="fas fa-shopping-basket"></i></li>
+                <li><a href="/registro">Creá tu cuenta </a><i class="fas fa-id-card"></i></li>
+                <li><a href="/login">Ingresá </a><i class="fas fa-sign-in-alt"></i></li>
+                <li><a href="">Mis Compras </a><i class="fas fa-shopping-basket"></i></li>
             </ul>
 
         </div>
@@ -51,7 +51,6 @@
         </div>
 
     </header>
-
     <form action="/" method="post">
 
 
